--- a/tests/TODO
+++ b/tests/TODO
@@ -1,30 +1,29 @@
-Add an option to Builder.py that enables users to specify index_columns when converting a file and update all tests (including CADD) accordingly.
-
-Rework parallelization when index column is used. Parallelize pulling row indices from index file (when there are a lot of them) in addition to (or rather than) for each sub-filter.
-
 When we invoke _parse_row_value, pass line_length and file handle from outside the function to improve efficiency?
-
-Rework Filters.filter_indexed_column_values_parallel for NumericWithinFilter so that the sub-filters do not store the indices for the entire ranges but rather just the limits of the range. Probably implement private classes called __NumericRangeLowerFilter and __NumericRangeUpperFilter.
-  This could perhaps be a larger-scale change, applied to NumericFilter itself (separating into LessThanFilter, GreaterThanFilter, etc.).
+  Rerun TestParseLarge.py when other stuff not being executed on the server.
 
 Print to standard out rather than saving directly to output file.
 
+Rework parallelization when index column is used. Parallelize pulling row indices from index file (when there are a lot of them) in addition to (or rather than) for each sub-filter.
 
-Test parsing CADD files.
+Rework Filters.filter_indexed_column_values_parallel for NumericWithinFilter so that the sub-filters do not store the indices for the entire ranges but rather just the limits of the range. Probably implement private classes called __NumericRangeLowerFilter and __NumericRangeUpperFilter.
+
+
+CADD files:
   Rebuild these files.
+  Parse
   Compare against tabix. We can also compare it in terms of size.
     https://www.htslib.org/doc/tabix.html
     tabix sorted.gff.gz chr1:10,000,000-20,000,000
-  Move to test.sh and generate formal statistics on it?
-
-If we need to go faster to beat tabix:
+  Generate formal statistics on results.
+  If we need to go faster to beat tabix:
     Implement composite ("covering", "cascading"?) index that supports multiple columns.
     Try Nuitka. https://nuitka.net (compiles your Python code to C, is supposed to achieve speedups of 3x or greater).
 
-Do demo/tests on LINCS data (see WishBuilder)?
+
+Do demo/tests on GNOMAD? LINCS data (see WishBuilder)?
 
 Remove unnecessary comments and address TODO items in ../f4py/*.
-  Do this in VS Studio Code or PyCharm.
+  Do this in VS Studio Code or PyCharm?
 
 Compare against other libraries/formats.
   Update to the latest version of R (in the Dockerfile).
@@ -45,6 +44,8 @@ Support the following scenarios (make sure the tests reflect them):
 Bring back the filters that I commented out in Filters.py.
   Make sure we have tests for them in TestSmall.py.
   Also NumericWithoutFilter, NumericBetweenFilter, NumericEqualsFilter, NumericNotEqualsFilter
+
+Expand NumericFilter to LessThanFilter, GreaterThanFilter, etc.
 
 The current design supports filtering on all non-indexed columns or all indexed
   columns but not a combination of both. What to do if the user violates this?
