--- a/tests/TODO
+++ b/tests/TODO
@@ -5,7 +5,8 @@ Print to standard out rather than saving directly to output file.
 
 Rework parallelization when index column is used. Parallelize pulling row indices from index file (when there are a lot of them) in addition to (or rather than) for each sub-filter.
 
-Rework Filters.filter_indexed_column_values_parallel for NumericWithinFilter so that the sub-filters do not store the indices for the entire ranges but rather just the limits of the range. Probably implement private classes called __NumericRangeLowerFilter and __NumericRangeUpperFilter.
+[Probably not] Rework Filters.filter_indexed_column_values_parallel for NumericWithinFilter so that the sub-filters do not store the indices for the entire ranges but rather just the limits of the range. Probably implement private classes called __NumericRangeLowerFilter and __NumericRangeUpperFilter.
+
 
 
 CADD files:
@@ -14,6 +15,7 @@ CADD files:
   Compare against tabix. We can also compare it in terms of size.
     https://www.htslib.org/doc/tabix.html
     tabix sorted.gff.gz chr1:10,000,000-20,000,000
+  Try CSI index files https://github.com/enasequence/schema/issues/18
   Generate formal statistics on results.
   If we need to go faster to beat tabix:
     Implement composite ("covering", "cascading"?) index that supports multiple columns.
@@ -29,9 +31,13 @@ Compare against other libraries/formats.
   Update to the latest version of R (in the Dockerfile).
   Update to the latest version of Python (in the Dockerfile)?
 
+Implement basic http server functionality as a demo.
+
 #####################################################
 # After benchmark paper (for software packages)
 #####################################################
+
+Allow user to specify missing values in Builder.convert() function. There is a function called is_missing_value in Utilities.py that should be removed.
 
 Support the following scenarios (make sure the tests reflect them):
   1) uncompressed data + no index
@@ -54,11 +60,7 @@ The current design supports filtering on all non-indexed columns or all indexed
   Maybe also optimize this code by having a flag file that indicates whether any
   column is indexed.
 
-Implement on-disk binary search for finding column indices based on names (Parser.py).
-  This would be beneficial if we want to support datasets with more than 1 million columns.
-  _get_column_meta function in Parser.py
-  Rework the logic in the get_column_type_from_name() function in Parser.py to use the same logic.
-  Rework the logic in the save() function in Indexer.py to use same logic as used in Parser.py for binary search.
+If you have a column that has mostly numeric data but has a few non-numeric values, the code to check the type might store tons of numbers as numeric values. Tweak the code to put a cap on how many can be stored in the set.
 
 Store discrete data in separate table from numeric? The first column is a JSON dictionary that maps Unicode characters to unique values in the column. This could save a lot of disk space in most cases.
   When inferring column sizes and types, store missing values using a single character and replace them when the values are queried?
