--- a/tests/TODO
+++ b/tests/TODO
@@ -1,20 +1,20 @@
-Add code to TestParseLarge.py that checks # rows and columns.
-
-Test - Print to standard out rather than saving directly to output file.
-
 Rework parallelization when index column is used.
   Test - Parallelize pulling row indices from index file (when there are a lot of them).
   Test - Remove parallelization across sub-filters? Run some tests to see.
 
-Rework Filters.filter_indexed_column_values_parallel for NumericWithinFilter so that the sub-filters do not store the indices for the entire ranges but rather just the limits of the range.
-  Think about whether we really need to do this, after testing the new parallelization scheme.
-  It would complicate the code quite a bit.
-  This need may also be met with composite indices, but not sure if it's the same thing.
+Rework Filters.filter_indexed_column_values_parallel for NumericWithinFilter so that the sub-filters
+  do not store the indices for the entire ranges but rather just the limits of the range.
+    Think about whether we really need to do this, after testing the new parallelization scheme.
+    It would complicate the code quite a bit.
+    This need may also be met with composite indices, but not sure if it's the same thing.
+
+Implement composite ("sequential", "covering") index that supports multiple columns.
 
 Run pstats.Stats one more time in TestParseLarge.py for tall_indexed_compressed and wide_indexed_compressed.
 
-Parallelize the process of generating the output file (save to temp file)?
-  This *might* help when doing a lot of decompression.
+Kick off full set of tests for large files and save results to GitHub.
+
+
 
 CADD files:
   Rebuild these files.
@@ -25,8 +25,9 @@ CADD files:
   Try CSI index files https://github.com/enasequence/schema/issues/18
   Generate formal statistics on results.
   If we need to go faster to beat tabix:
-    Implement composite ("covering", "cascading"?) index that supports multiple columns.
     Try Nuitka. https://nuitka.net (compiles your Python code to C, is supposed to achieve speedups of 3x or greater).
+    Parallelize the process of generating the output file (save to temp file)?
+      This *might* help when doing a lot of decompression.
 
 
 Remove GNOMAD code/tests.
