--- a/tests/TODO
+++ b/tests/TODO
@@ -1,3 +1,10 @@
+    #TODO: Test StringRangeFilter on indexed data.
+    #        Rework the tests so that index_columns is a parameter and consolidate some of the tests in run_small so it is shorter.
+    #TODO: Implement FunnelFilter.
+    #        Only works on indexed columns.
+    #        Should this be part of AndFilter rather than its own thing?
+    #          Ideally would be generic so that StringRangeFilter and IntRangeFilter can be passed to it.
+
 If cache_intermediate_results is enabled, store it in /tmp/ rather than tmp_dir_path.
   Or maybe better, change this parameter to be a directory rather than a boolean.
     Make sure it's not the same location as tmp_dir_path.
