--- a/tests/TODO
+++ b/tests/TODO
@@ -1,21 +1,17 @@
-Rework the tests so that index_columns is a parameter and consolidate some of the tests in run_small so it is shorter.
-
 Add tests for StringGreaterThanFilter and StringLessThanFilter.
 
-In IndexHelper, allow user to specify a list of column names
-  for an index rather than having to explicitly invoke save_funnel_index.
-
-Remove column_coords_dict (and possibly column_type_dict and column_index_dict) from filter_indexed_column_values function signature.
-Change Indexer classes to IndexBuilder.
-Change "categorical" to "string" everywhere.
+Remove column_coords_dict (and possibly column_type_dict and column_index_dict) from filter_indexed_column_values function signature?
+Change Indexer classes to IndexBuilder?
 Change f4_file_path to data_file_path everywhere for consistency.
+Change "categorical" to "string" everywhere.
 
 Implement composite ("sequential", "covering") index that supports multiple columns.
   Implement FunnelFilter.
     Only works on indexed columns.
     Should this be part of AndFilter rather than its own thing?
     Ideally would be generic so that StringRangeFilter and IntRangeFilter can be passed to it.
-
+  In IndexHelper, allow user to specify a list of column names
+    for an index rather than having to explicitly invoke save_funnel_index.
 
 
 CADD files:
